--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build": "electron-builder",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
+  "build": {
+    "files": [
+      "**/*",
+      "build" ,
+      "!node_modules",
+      "node_modules/electron-is-dev"
+    ],
+    "electronDownload":{
+      "mirror":"https://npm.taobao.org/mirrors/electron/"
+    }
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jugendreisen/Jugendreisen.git"
@@ -25,7 +40,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.2"
+    "electron": "^12.0.2",
+    "electron-builder": "^22.10.5"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
